Fixed flex wrap to render properly on mobile

--- a/janky_style.css
+++ b/janky_style.css
@@ -3,6 +3,7 @@
     text-align: center;
     margin: auto;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .janky_countdown .janky_wrapper {
